fix: CGPA input field is changed to number type from any text type
Co-authored-by: Soumyodeep-Das <linux.programmer.06@gmail.com>
Co-authored-by: SattikBhowmick25 <sattikbhowmick2002@gmail.com>

--- a/style.css
+++ b/style.css
@@ -413,3 +413,10 @@ ul{
 .chColor3{
     color: #555555;
 }
+
+/* Hide the number input spinner for all browsers */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none; 
+    margin: 0; 
+}
