--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
     font-family: 'Poppins',sans-serif;
 }
 body {
-    background-image: url("bg2.jpg");
+    background-image: url("../assets/bg2.jpg");
     background-color: #f0f0f0;  /* Fallback background */
 }
 
